# GoldenPlains

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  basic  basictest  build_and_install.sh  button  cleanup.sh  cmake_cleanup.sh  cmake_install.cmake  gptest  install_manifest.txt  stress  stresstest  text
SimpleVulkanObjLoader/: Makefile  VulkanTest  graphics_layer.cpp  graphics_layer.h  main.cpp  tutorial_ref.cpp  vulkan_handler.cpp  vulkan_handler.h
SimpleVulkanObjLoader/shaders/: compile.sh  shader.frag  shader.vert
SimpleVulkanObjLoader/x64/Debug/: vc142.idb
SimpleVulkanObjLoader/x64/Debug/SimpleVu.BBCCFC7C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SimpleVulkanObjLoader.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/: Makefile_old.txt  todo.txt
samples/: basic.cpp  bounding_box.cpp  button.cpp  stress.cpp  text.cpp
shaders/: shader.frag
src/: Makefile  golden_plains.cpp  golden_plains.h  vulkan_handler.cpp  vulkan_handler.h
test/: main.cpp
